# rgb_mapping

./: CMakeLists.txt  README.md  package.xml
src/: rgb_mapping.cpp
